--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,9 +100,10 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Zig
-        uses: mlugg/setup-zig@v1
+        uses: step-security/setup-zig@v2
         with:
           version: 0.15.2
+          cache-key: ${{ matrix.zig_target }}
 
       - name: Build binary
         run: |
