--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -100,7 +100,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Setup Zig
-        uses: step-security/setup-zig@v2
+        uses: mlugg/setup-zig@v2
         with:
           version: 0.15.2
           cache-key: ${{ matrix.zig_target }}
